--- a/src/index.html
+++ b/src/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -11,3 +11,12 @@
     <script type="module" src="./main.tsx"></script>
   </body>
 </html>
+
+<style>
+  #root,
+  body,
+  html {
+    width: 100%;
+    height: 100%;
+  }
+</style>
